<resources>
    <string name="app_name">Juicey Pizza Main Menu</string>
    <string name="add_pizza_name">Add Pizza Activity</string>
    <string name="action_settings">Settings</string>
    <string name="price">Price</string>
    <string name="size">Size</string>
    <string name="order_string">Order Up!</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Juicey Pizza Create Pizza</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="current_order_label">Current Order</string>
    <string name="store_orders_label">Store Orders</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="add_topping">Add &gt;</string>
    <string name="delete_topping">&lt; Remove</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="enter_phone_nuber">Enter phone nuber</string>
    <string name="store_order">Store Orer</string>
    <string name="hawaiian_pizza">Hawaiian Pizza</string>
    <string name="pepperoni_pizza">Pepperoni Pizza</string>
    <string name="deluxe_pizza">Deluxe Pizza</string>
    <string name="priceplaceholder">pricePlaceholder</string>
    <string name="pepperonipizzapicture">PepperoniPizzaPicture</string>
    <string name="unadded">Unadded</string>
    <string name="added">Added</string>
    <string name="the_button">The Button</string>
    <string name="current_order">Current Order</string>
    <string name="customer_s_phone_number">Customer\'s Phone Number</string>
    <string name="amount_of_pizzas_0">Amount of Pizzas: 0</string>
    <string name="subtotal">Subtotal</string>
    <string name="sales_tax">Sales Tax</string>∂
    <string name="order_total">Order Total</string>
    <string name="_0_00">$0.00</string>
    <string name="place_order">Place Order</string>
    <string name="remove_pizza">Remove Pizza</string>
    <string name="store_orders">Store Orders</string>
    <string name="cancel_order">Cancel Order</string>
</resources>