<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddPizzaActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.PizzaApp2.AppBarOverlay" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".OrderPizzi"
        tools:layout_editor_absoluteX="9dp"
        tools:layout_editor_absoluteY="-52dp">


        <ImageButton
            android:id="@+id/pizza_picture"
            android:layout_width="247dp"
            android:layout_height="171dp"
            android:layout_marginBottom="15dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/pepperonipizzapicture"
            android:scaleType="fitCenter"
            android:src="@drawable/pepperoni_pizza"
            app:layout_constraintBottom_toTopOf="@+id/textView5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:text="@string/price"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pizza_picture" />

        <TextView
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="32dp"
            android:text="@string/priceplaceholder"
            app:layout_constraintStart_toEndOf="@+id/textView5"
            app:layout_constraintTop_toBottomOf="@+id/pizza_picture" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="128dp"
            android:layout_marginTop="72dp"
            android:text="@string/size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pizza_picture" />

        <Spinner
            android:id="@+id/pizza_sizes"
            android:layout_width="154dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="48dp"
            app:layout_constraintStart_toEndOf="@+id/textView7"
            app:layout_constraintTop_toBottomOf="@+id/pizza_picture" />

        <TextView
            android:id="@+id/pizza_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="12dp"
            android:background="@color/white"
            android:text="@string/deluxe_pizza"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintBottom_toTopOf="@+id/pizza_picture"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="159dp"
            android:layout_marginEnd="159dp"
            android:layout_marginBottom="100dp"
            android:background="@color/white"
            android:text="@string/order_string"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent" />

        <ListView
            android:id="@+id/unused_toppings"
            android:layout_width="128dp"
            android:layout_height="219dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="53dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <ListView
            android:id="@+id/current_toppings"
            android:layout_width="129dp"
            android:layout_height="213dp"
            android:layout_marginStart="100dp"
            android:layout_marginTop="52dp"
            app:layout_constraintStart_toEndOf="@+id/unused_toppings"
            app:layout_constraintTop_toBottomOf="@+id/textView7" /><![CDATA[

        ;
            tools:layout_editor_absoluteX="170dp"
            tools:layout_editor_absoluteY="390dp" />







        ]]>

        <ImageButton
            android:id="@+id/order_up_button"
            android:layout_width="94dp"
            android:layout_height="83dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/the_button"
            android:onClick="orderUp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/marios_pizza"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="57dp"
            android:layout_marginBottom="14dp"
            android:text="@string/unadded"
            app:layout_constraintBottom_toTopOf="@+id/unused_toppings"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="71dp"
            android:layout_marginBottom="14dp"
            android:text="@string/added"
            app:layout_constraintBottom_toTopOf="@+id/current_toppings"
            app:layout_constraintEnd_toEndOf="parent" />;
        android:text="@string/delete_topping"
        tools:layout_editor_absoluteX="170dp"
        tools:layout_editor_absoluteY="501dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>