<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StoreOrdersActivity"
    android:background="?android:attr/activatedBackgroundIndicator">

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="166dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="166dp"
        android:text="@string/store_orders"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="29dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="19dp"
        android:text="@string/customer_s_phone_number"
        app:layout_constraintEnd_toStartOf="@+id/number_spinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <Spinner
        android:id="@+id/number_spinner"
        android:layout_width="129dp"
        android:layout_height="42dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="68dp"
        android:background="#DCDCDC"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView11"
        app:layout_constraintTop_toBottomOf="@+id/textView12"
        tools:ignore="SpeakableTextPresentCheck" />

    <ListView
        android:id="@+id/all_orders"
        android:layout_width="400dp"
        android:layout_height="402dp"
        android:layout_marginStart="7dp"
        android:layout_marginTop="24dp"
        android:background="#EFEFEF"
        android:choiceMode="singleChoice"
        android:listSelector="@android:color/darker_gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/number_spinner" />

    <Button
        android:id="@+id/ordersList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="128dp"
        android:layout_marginEnd="134dp"
        android:layout_marginBottom="49dp"
        android:onClick="cancelOrder"
        android:text="@string/cancel_order"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>